--- a/recipe.html
+++ b/recipe.html
@@ -51,5 +51,6 @@
 		<h3 class="header">That's it!</h3>
 		<p>You can now enjoy your dish!</p>
 		</br>
+		<!--button for hiding pictures-->
 		<button>Hide all pictures</button>
 		
