--- a/recipe.html
+++ b/recipe.html
@@ -7,13 +7,16 @@
 		<script src="script.js"></script>
 	</head>
 	<body>
+		
 		<!-- Intro -->
 		<h1>How to make spicy chicken soup</h1>
 		<p>This is how you make a spicy chicken soup like a <strong>pro</strong></p>
 		<img src = "http://cfile2.uf.tistory.com/original/1525260C4C3B9B2B3B1B45" />
+		
 		<!--ingredients-->
 		<p>But, first</p>
 		<p>Here's the list of ingredients you need for this recipe</p>
+		
 		<img src = "http://pbatimes.com/news/upload/1393775734485.jpg" />
 		<ol>
 			<li><em>Main ingredients</em></li>
@@ -23,31 +26,36 @@
 				<li>potatotes</li>
 			</ul>
 		<p></p>
+		
 		<img src = "http://pbatimes.com/news/upload/1393775755708.jpg" />
 			<li><em>Sauce</em></li>
 			<ul>
-				<li>soy sauce</li>
-				<li>sugar</li>
-				<li>chili powder</li>
-				<li>garlics</li>
+				<li>2 spoons of soy sauce</li>
+				<li>3 spoons of sugar</li>
+				<li>2 spoons chili powder</li>
+				<li>7 spoons ofgarlics</li>
 			</ul>
 		</br>
+		
 		<img src = "http://pbatimes.com/news/upload/1393775769002.jpg" />
 			<li><em>Miscellaneous ingredients</em></li>
 			<ul>
 				<li>red/green chilli peppers</li>
 				<li>green onions</li>
 		</ol>
+		
 		<!--Directions-->
 		<section>
 		<h2 class = "header">5 steps to making spicy chicken soup</h2>
 		<ol>
+			<li>Cut chicken into your preferred portions
 			<li>Cut the main ingredients into portions smaller than chicken</li>
-			<li>Add sugar into water and boil the chicken
+			<li>Add sugar and garlic into water and boil the chicken
 			<li>Once the water boils, add main ingredients in the order of potatoes, carrots, and onions couple minutes apart from each other
 			<li>Add rest of the ingredients and the sauce
 		</ol>
 		</section>
+		
 		<h3 class="header">That's it!</h3>
 		<p>You can now enjoy your dish!</p>
 		</br>
